--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -29,6 +29,10 @@ clean-targets:         # directories to be removed by `dbt clean`
 # In this example config, we tell dbt to build all models in the example/
 # directory as views. These settings can be overridden in the individual model
 # files using the `{{ config(...) }}` macro.
+seeds:
+  +schema: raw  # Указывает схему, куда будут загружаться seed файлы
+  +database: PostgreSQL-1764  # (опционально) Если нужно указать конкретную базу данных
+
 models:
   hz:
     # Config indicated by + and applies to all files under models/example/
